--- a/src/css/css-global/structure.css
+++ b/src/css/css-global/structure.css
@@ -18,7 +18,7 @@ html {
 */
 
 .logo {
-  background-image: url(/website-logo.png);
+  background-image: url(../../images/website-logo.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
